--- a/.htaccess
+++ b/.htaccess
@@ -5,10 +5,11 @@ RewriteEngine On
 RewriteCond %{REQUEST_URI} !^/public/
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !index\.php[0-9]+$
 RewriteCond %{REQUEST_FILENAME}.php -f
 
 RewriteRule ^(.*)$ /public/$1 
-#RewriteRule ^(/)?$ public/index.php [L]
+RewriteRule ^(/)?$ public/index.php [L]
 </IfModule>
 
 <IfModule mod_headers.c>
