--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !index\.php[0-9]+$
 RewriteCond %{REQUEST_FILENAME}.php -f
 
-RewriteRule ^(.*)$ /public/$1 
+#RewriteRule ^(.*)$ /public/$1 
 RewriteRule ^(/)?$ public/index.php [L]
 </IfModule>
 
