--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,7 @@ RewriteCond %{REQUEST_FILENAME} !index\.php[0-9]+$
 RewriteCond %{REQUEST_FILENAME}.php -f
 
 #RewriteRule ^(.*)$ /public/$1 
-RewriteRule ^(.)?$ public/index.php [L]
+RewriteRule ^(/)?$ public/index.php [L]
 </IfModule>
 
 
