--- a/.htaccess
+++ b/.htaccess
@@ -2,9 +2,10 @@
 Options +FollowSymLinks
 RewriteEngine On
 
-
+RewriteCond %{REQUEST_URI} !^/public/
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !index\.php[0-9]+$
 RewriteCond %{REQUEST_FILENAME}.php -f
 
 RewriteRule ^(.*)$ /public/$1 
