--- a/.env
+++ b/.env
@@ -42,6 +42,7 @@ SESSION_COOKIE=${APP_NAME}_session
 SESSION_DRIVER=cookie
 SESSION_SECURE_COOKIE=true
 SESSION_HTTPONLY=true
+SESSION_DRIVER=file
 
 MEMCACHED_HOST=127.0.0.1
 
