--- a/.env
+++ b/.env
@@ -9,19 +9,19 @@ LOG_LEVEL=debug
 FILESYSTEM_DRIVER=public
 CHATIFY_STORAGE_DISK=public
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=chatify
-DB_USERNAME=root
-DB_PASSWORD=
-
 #DB_CONNECTION=mysql
 #DB_HOST=127.0.0.1
 #DB_PORT=3306
-#DB_DATABASE=u510162695_mm_db
-#DB_USERNAME=u510162695_mm_db_root
-#DB_PASSWORD=1Mm_db_root
+#DB_DATABASE=chatify
+#DB_USERNAME=root
+#DB_PASSWORD=
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=u510162695_mm_db
+DB_USERNAME=u510162695_mm_db_root
+DB_PASSWORD=1Mm_db_root
 
 #RECAPTCHA_SITE_KEY=6LfihnEqAAAAAIet5IRVAvaodeObJryzsQPqLAMk
 #RECAPTCHA_SECRET_KEY=6LfihnEqAAAAAHc7vvV02T-Hw43DtRfNwQb86LyU
