--- a/.htaccess
+++ b/.htaccess
@@ -1,21 +1,41 @@
 <IfModule mod_rewrite.c>
-    Options +FollowSymLinks
-    RewriteEngine On
+Options +FollowSymLinks
+RewriteEngine On
 
-    # Block access to .env file
-    RewriteRule ^\.env$ - [F,L]
+RewriteCond %{REQUEST_URI} !^/public/
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !index\.php[0-9]+$
+RewriteCond %{REQUEST_FILENAME}.php -f
 
-    # Remove .php extension from URLs
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^([a-zA-Z0-9_-]+)$ $1.php [L]
+RewriteRule ^(.*)$ /public/$1 
+RewriteRule ^(/)?$ public/index.php [L]
+</IfModule>
 
-    # Ensure all non-public requests are directed to the /public/ directory
-    RewriteCond %{REQUEST_URI} !^/public/
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ /public/$1 [L]
+<IfModule mod_headers.c>
+    <!-- Header set Content-Security-Policy "
+        default-src 'self';
+        script-src 'self' https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
+        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com;
+        font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
+        img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
+        object-src 'none';  # Disallow all plugins
+        base-uri 'self';    # Only allow the same origin
+    " -->
+        Header set Content-Security-Policy "
+        default-src 'self';
+        script-src 'self' https://cdn.jsdelivr.net/npm/chart.js https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@latest/dist/chartjs-adapter-moment.min.js https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js https://cdn.jsdelivr.net/npm/chart.js https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
+        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css  https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ;
+        font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
+        img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
+        object-src 'none';  # Disallow all plugins
+        base-uri 'self';    # Only allow the same origin
+    "
 
-    # Direct the root (/) to the public/index.php
-    RewriteRule ^(/)?$ public/index.php [L]
+        Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+        Header set X-Content-Type-Options "nosniff"
+        Header set X-Frame-Options "SAMEORIGIN"
+        Header set X-XSS-Protection "1; mode=block"
+        Header set Referrer-Policy "no-referrer"
+        Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self'; frame-ancestors 'none'; object-src 'none'; form-action 'self';"
 </IfModule>
